	PR c++/55710 	* semantics.c (maybe_add_lambda_conv_op): Mark static thunk 	TREE_USED.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@196025 138bc75d-0d04-0410-961f-82ee72b054a4